# groupware-migrator

./: .env.example  .gitignore  .releaserc.json  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  roadmap-future.html  roadmap.html  start.sh
.claude/: settings.json
.github/workflows/: ci.yml  security.yml
docs/: nginx.example.conf
docs/superpowers/plans/: 2026-06-10-phase-1-backend-foundation.md  2026-06-10-phase-2-auth-multitenancy.md  2026-06-10-phase-3-frontend-quality.md  2026-06-11-email-notifications.md  2026-06-11-ldap-auth.md  2026-06-11-plugin-sdk.md
docs/superpowers/specs/: 2026-06-10-product-roadmap-design.md  2026-06-11-email-notifications-design.md  2026-06-11-ldap-auth-design.md  2026-06-11-plugin-sdk-design.md
examples/: batch-users.example.csv  migration-config.example.json
examples/sample_plugin/: pyproject.toml
examples/sample_plugin/src/sample_plugin/: connector.py
src/groupware_migrator/: __init__.py  cli.py  providers.py
src/groupware_migrator/api/: __init__.py  app.py  auth.py  rate_limit.py  schemas.py
src/groupware_migrator/connectors/: __init__.py  auth.py  base.py  dav.py  ews.py  factory.py  graph.py  imap.py  pop3.py
src/groupware_migrator/engine/: __init__.py  background.py  batch.py  cron.py  idempotency.py  ldap_auth.py  mailer.py  oidc.py  planner.py  plugin_registry.py  postgres_state.py  preflight.py  redis_jobs.py  reporting.py  rq_worker.py  runner.py  scheduler.py  state.py  vault.py  webhooks.py
tests/: test_auth.py  test_background.py  test_backup_export.py  test_batch.py  test_connector_auth.py  test_connector_estimates.py  test_email_notifications.py  test_ews_connector.py  test_idempotency.py  test_imap_connector.py  test_ldap_auth.py  test_metrics.py  test_msgraph.py  test_oidc.py  test_phase4_phase6.py  test_phase4_remaining.py  test_phase5_phase7.py  test_planner.py  test_plugin_sdk.py  test_postgres_state.py  test_preflight.py  test_providers.py  test_redis_jobs.py  test_reporting.py  test_runner.py  test_state.py  test_user_auth.py  test_workload_support.py
(+33 files in other folders)
