[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groupware-migrator"
version = "0.1.0"
description = "Local-first groupware migration engine (IMAP/POP3 -> IMAP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "passlib[bcrypt]>=1.7",
  "PyJWT>=2.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4"
]

[project.scripts]
groupware-migrator = "groupware_migrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
