[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groupware-migrator"
version = "0.1.0"
description = "Local-first groupware migration engine (IMAP/POP3 -> IMAP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "ldap3>=2.9",
  "bcrypt>=4.0",
  "PyJWT>=2.8",
  "pyotp>=2.9",
  "cryptography>=42.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "httpx2"
]

[project.scripts]
groupware-migrator = "groupware_migrator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
