[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-plugin"
version = "0.1.0"
description = "Example groupware-migrator connector plugin"
requires-python = ">=3.11"
dependencies = ["groupware-migrator"]

[project.entry-points."groupware_migrator.source_connectors"]
sample = "sample_plugin.connector:SampleSourceConnector"

[project.entry-points."groupware_migrator.destination_connectors"]
sample = "sample_plugin.connector:SampleDestinationConnector"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
